--- a/now.html
+++ b/now.html
@@ -8,6 +8,7 @@
     <tr>
         <td><a href="about.html">About</a>
         <td><a href="index.html">Home</a>
+        <td><a href="audio.html">Audio</a>
         <td><a href="https://github.com/zschaffer">Code</a>
     </tr>
 </table>
