--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
 <link href="css/style.css" rel="stylesheet">
 <table>
     <tr>
-        <td><a href="index.html">Home</a>
-        <td><a href="now.html">Now</a>
-        <td><a href="audio.html">Audio</a>
+        <td><a href="/">Home</a>
+        <td><a href="/now">Now</a>
+        <td><a href="/audio">Audio</a>
         <td><a href="https://github.com/zschaffer">Code</a>
     </tr>
 </table>
