--- a/now.html
+++ b/now.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>zane.town</title>
+<title>zane.town | now</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="css/style.css" rel="stylesheet">
@@ -13,13 +13,13 @@
     </tr>
 </table>
 <article>
-    <h4>Technology</h4>
     <p>I am currently learning more about embedded systems,
     <p>how they interact, and how they communicate inside.
     <p>I've been focusing on making things in C/C++
     <p>reading endless manpages
     <p>and tinkering with SBC's.
-    <h4>Music</h4>
+    <br>
+    <br>
     <p>I've lost the motivation and free time to create
     <p>and lately I only listen.
     <p>To make up for this -
