Change anchor hrefs to include .html for routing

--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
 <table>
     <tr>
         <td><a href="/">Home</a>
-        <td><a href="/now">Now</a>
-        <td><a href="/audio">Audio</a>
+        <td><a href="/now.html">Now</a>
+        <td><a href="/audio.html">Audio</a>
         <td><a href="https://github.com/zschaffer">Code</a>
     </tr>
 </table>
