--- a/audio.html
+++ b/audio.html
@@ -6,8 +6,8 @@
 <link href="css/style.css" rel="stylesheet">
 <table>
     <tr>
-        <td><a href="/about">About</a>
-        <td><a href="/now">Now</a>
+        <td><a href="/about.html">About</a>
+        <td><a href="/now.html">Now</a>
         <td><a href="/">Home</a>
         <td><a href="https://github.com/zschaffer">Code</a>
     </tr>
