--- a/now.html
+++ b/now.html
@@ -4,14 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="css/style.css" rel="stylesheet">
-<table>
-    <tr>
-        <td><a href="about.html">About</a>
-        <td><a href="/">Home</a>
-        <td><a href="audio.html">Audio</a>
-        <td><a href="https://github.com/zschaffer">Code</a>
-    </tr>
-</table>
+<div id="header">
+  <a href="/">Town</a>
+  <a href="/now.html">Now</a>
+  <a href="/me.html">Me</a>
+  <a href="/album.html">Album</a>
+  <a href="/music.html">Music</a>
+  <a href="https://github.com/zschaffer">Code</a>
+</div>
 <article>
     <p>I am currently learning more about embedded systems,
     <p>how they interact, and how they communicate inside.
