Fix some of the footers

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
         <br>
     <p>For now, may I direct your attention to
     <p>my <a href="https://github.com/zschaffer">creative endeavours</a>,
-    <p>and <a href="now.html">current happenings<a />.
+    <p>and <a href="now.html">current happenings</a>.
 </article>
-<footer>
-    <p id=1>[1] - <a href="https://rhodesmill.org/brandon/2012/one-sentence-per-line/">Semantic Linefeeds</a>
-        as a creative writing technique</p>
-</footer>
+<p>---</p>
+<p id=1>[1] - <a href="https://rhodesmill.org/brandon/2012/one-sentence-per-line/">Semantic Linefeeds</a> as a creative writing technique</p>
