Add first album of the day

--- a/album.html
+++ b/album.html
@@ -15,24 +15,10 @@
 <p>This page archives my goal to listen to an album every day this year.
 <article class="album_box">
   <div class="album">
-    <a href="https://musicbrainz.org/release/0da212fd-1e4d-4a13-884a-2a7168b0ff86">
-      <img alt="Dauwd - Theory Of Colours" title="Dauwd - Theory Of Colours"
-        src="https://coverartarchive.org/release/0da212fd-1e4d-4a13-884a-2a7168b0ff86/18221887526-250.jpg">
-      <p>316</p>
-    </a>
-  </div>
-  <div class="album">
-    <a href="https://musicbrainz.org/release/3d9d615b-a55d-431f-ae61-2e64c3ab6e03">
-      <img alt="Frank Bretschneider - Super.Trigger" title="Frank Bretschneider - Super.Trigger"
-        src="https://coverartarchive.org/release/3d9d615b-a55d-431f-ae61-2e64c3ab6e03/22109213573-250.jpg">
-      <p>317</p>
-    </a>
-  </div>
-  <div class="album">
-    <a href="https://musicbrainz.org/release/f56cec4b-a327-45d1-8498-7deb9a48eef6">
-      <img alt="Mapstation - Sleep, Engine, Sleep" title="Mapstation - Sleep, Engine, Sleep"
-        src="https://i.discogs.com/JoJdZZeMSiCwdoo_6KJJoEmzJgRyUEBtvHNowAYudLQ/rs:fit/g:sm/q:90/h:593/w:597/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTIzNjE2/Mi0xMzA3NDU1MDA1/LmpwZWc.jpeg">
-      <p>318</p>
+    <a href="albums/2022/316">
+      <img class="cover" alt="Dauwd - Theory Of Colours" title="Dauwd - Theory Of Colours"
+        src="albums/2022/316/cover.jpg">
+      <p>[ 316 ] Theory Of Colours</p>
     </a>
   </div>
 </article>
