Change to implied extensions for a-tags

--- a/album.html
+++ b/album.html
@@ -6,19 +6,18 @@
 <link href="css/style.css" rel="stylesheet">
 <div id="header">
   <a href="/">Town</a>
-  <a href="/now.html">Now</a>
-  <a href="/me.html">Me</a>
-  <a href="/album.html">Album</a>
-  <a href="/music.html">Music</a>
+  <a href="/now">Now</a>
+  <a href="/me">Me</a>
+  <a href="/album">Album</a>
+  <a href="/music">Music</a>
   <a href="https://github.com/zschaffer">Code</a>
 </div>
 <p>This page archives my goal to listen to an album every day this year.
 <article class="album_box">
   <div class="album">
     <a href="albums/2022/316">
-      <img class="cover" alt="Dauwd - Theory Of Colours" title="Dauwd - Theory Of Colours"
+      <img class="cover" alt="[316] Dauwd - Theory Of Colours" title="[316] Dauwd - Theory Of Colours"
         src="albums/2022/316/cover.jpg">
-      <p>[ 316 ] Theory Of Colours</p>
     </a>
   </div>
 </article>
