--- a/me.html
+++ b/me.html
@@ -6,10 +6,10 @@
 <link href="css/style.css" rel="stylesheet">
 <div id="header">
   <a href="/">Town</a>
-  <a href="/now.html">Now</a>
-  <a href="/me.html">Me</a>
-  <a href="/album.html">Album</a>
-  <a href="/music.html">Music</a>
+  <a href="/now">Now</a>
+  <a href="/me">Me</a>
+  <a href="/album">Album</a>
+  <a href="/music">Music</a>
   <a href="https://github.com/zschaffer">Code</a>
 </div>
 <article>
