Remove embedded spotify iframe - cannot style it; replace with links to music services

--- a/music.html
+++ b/music.html
@@ -12,9 +12,12 @@
   <a href="/music">Music</a>
   <a href="https://github.com/zschaffer">Code</a>
 </div>
+    <p> Here are a few places you can find my own music.
 <article>
-    <iframe style="border-radius:12px"
-        src="https://open.spotify.com/embed/artist/1stp6XCHbjsyVmOYGyYBuz?utm_source=generator&theme=0" width="100%"
-        height="80" frameBorder="0" allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+	<ul style="padding-left: 0px; list-style: none;">
+		<li><p> <a href="https://open.spotify.com/artist/1stp6XCHbjsyVmOYGyYBuz">Spotify</a></p></li>
+		<li><p> <a href="https://zaneschaffer.bandcamp.com">Bandcamp</a></p></li>
+		<li><p> <a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a></p></li>
+		<li><p> <a href="https://soundcloud.com/zaneschaffer">Soundcloud</a></li>
+	</ul>
 </article>
