Add album day 320

--- a/album.html
+++ b/album.html
@@ -15,9 +15,15 @@
 <p>This page archives my goal to listen to an album every day this year.
 <article class="album_box">
   <div class="album">
-    <a href="albums/2022/316">
-      <img class="cover" alt="[316] Dauwd - Theory Of Colours" title="[316] Dauwd - Theory Of Colours"
-        src="albums/2022/316/cover.jpg">
+    <a href="albums/2022/319">
+      <img class="cover" alt="[319] Dauwd - Theory Of Colours" title="[319] Dauwd - Theory Of Colours"
+        src="albums/2022/319/cover.jpg">
+    </a>
+  </div>
+  <div class="album">
+    <a href="albums/2022/320">
+      <img class="cover" alt="[320] Alternate Current - Fresh Scars From Old Wounds"
+        title="[320] Alternate Current - Fresh Scars From Old Wounds" src="albums/2022/320/cover.jpg">
     </a>
   </div>
 </article>
