--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>zane.town</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="me" href="https://hachyderm.io/@zane" />
 <link href="css/style.css" rel="stylesheet">
 <div id="header">
   <a href="/">Town</a>
