--- a/album.html
+++ b/album.html
@@ -12,18 +12,18 @@
   <a href="/music">Music</a>
   <a href="https://github.com/zschaffer">Code</a>
 </div>
-<p>This page archives my goal to listen to an album every day this year.
+<p>This page archives my goal to listen to an album every week.
 <article class="album_box">
   <div class="album">
-    <a href="albums/2022/319">
-      <img class="cover" alt="[319] Dauwd - Theory Of Colours" title="[319] Dauwd - Theory Of Colours"
-        src="albums/2022/319/cover.jpg">
+    <a href="albums/2022/44">
+      <img class="cover" alt="[44] Dauwd - Theory Of Colours" title="[44] Dauwd - Theory Of Colours"
+        src="albums/2022/44/cover.jpg">
     </a>
   </div>
   <div class="album">
-    <a href="albums/2022/320">
-      <img class="cover" alt="[320] Alternate Current - Fresh Scars From Old Wounds"
-        title="[320] Alternate Current - Fresh Scars From Old Wounds" src="albums/2022/320/cover.jpg">
+    <a href="albums/2022/45">
+      <img class="cover" alt="[45] Alternate Current - Fresh Scars From Old Wounds"
+        title="[45] Alternate Current - Fresh Scars From Old Wounds" src="albums/2022/45/cover.jpg">
     </a>
   </div>
 </article>
