Add streaming info

--- a/music.html
+++ b/music.html
@@ -12,12 +12,10 @@
   <a href="/music">Music</a>
   <a href="https://github.com/zschaffer">Code</a>
 </div>
-    <p> Here are a few places you can find my own music.
-<article>
-	<ul style="padding-left: 0px; list-style: none;">
-		<li><p> <a href="https://open.spotify.com/artist/1stp6XCHbjsyVmOYGyYBuz">Spotify</a></p></li>
-		<li><p> <a href="https://zaneschaffer.bandcamp.com">Bandcamp</a></p></li>
-		<li><p> <a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a></p></li>
-		<li><p> <a href="https://soundcloud.com/zaneschaffer">Soundcloud</a></li>
-	</ul>
-</article>
+<p> You can hear me stream music live
+<p> Mondays, Wednesdays, and Fridays
+<p> 11:00am PST at <a href="https://tilderadio.org">tilderadio</a>.</p>
+<br>
+<p> My released music lives on</p>
+<p> <a href="https://open.spotify.com/artist/1stp6XCHbjsyVmOYGyYBuz">Spotify</a> & <a href="https://zaneschaffer.bandcamp.com">Bandcamp</a></p>
+<p> <a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a> & <a href="https://soundcloud.com/zaneschaffer">Soundcloud</a></p>
