New album added

--- a/album.html
+++ b/album.html
@@ -26,4 +26,10 @@
         title="[45] Alternate Current - Fresh Scars From Old Wounds" src="albums/2022/45/cover.jpg">
     </a>
   </div>
+  <div class="album">
+    <a href="albums/2022/46">
+      <img class="cover" alt="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002"
+        title="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002" src="albums/2022/46/cover.jpg">
+    </a>
+  </div>
 </article>
