change some styling

--- a/aotw.html
+++ b/aotw.html
@@ -5,12 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="css/style.css" rel="stylesheet">
 <div id="header">
-  <a href="/">Town</a>
+  [
+  <a href="/">Home</a> 
+  <a href="/aotw">Aotw</a>
   <a href="/now">Now</a>
-  <a href="/me">Me</a>
-  <a href="/album">Album</a>
-  <a href="/music">Music</a>
+  <a href="/audio">Audio</a>
   <a href="https://github.com/zschaffer">Code</a>
+  ]
 </div>
 <p>This page archives my goal to listen to an album every week.
 <article class="album_box">
