--- a/me.html
+++ b/me.html
@@ -5,16 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="css/style.css" rel="stylesheet">
 <div id="header">
-  <a href="/">Town</a>
+  [
+  <a href="/">Home</a> 
+  <a href="/aotw">Aotw</a>
   <a href="/now">Now</a>
-  <a href="/me">Me</a>
-  <a href="/album">Album</a>
-  <a href="/music">Music</a>
+  <a href="/audio">Audio</a>
   <a href="https://github.com/zschaffer">Code</a>
+  ]
 </div>
 <article>
     <p>I am a 26 year old male,
-    <p>born in the Pacific Northwest<sup>[<a href=#1>1</a>]</sup>
+    <p>born in the Pacific Northwest
     <p>to a pair of loving parents,
     <p>pure creatives at heart.
     <br>
@@ -43,5 +44,3 @@
     <p>and warble,
     <p>and pop.
 </article>
-<p>---</p>
-<p id=1>[1] - <a href="https://en.wikipedia.org/wiki/Seattle">Seattle, Washington</a>
