--- a/index.html
+++ b/index.html
@@ -6,26 +6,25 @@
 <link rel="me" href="https://hachyderm.io/@zane" />
 <link href="css/style.css" rel="stylesheet">
 <div id="header">
-  <a href="/">Town</a>
+  [
+  <a href="/">Home</a> 
+  <a href="/aotw">Aotw</a>
   <a href="/now">Now</a>
-  <a href="/me">Me</a>
-  <a href="/album">Album</a>
-  <a href="/music">Music</a>
+  <a href="/audio">Audio</a>
   <a href="https://github.com/zschaffer">Code</a>
+  ]
 </div>
 <article>
-    <p>You have stumbled upon my dear little site,<sup>[<a href=#1>1</a>]</sup>
-    <p>lacking much in terms of content,
-    <p>yet still full of life.
-    <p>I'd encourage a repeat visit
-    <p>as often as you'd like.
-    <p>Who knows what might change,
-    <p>as time progresses on.
-        <br>
-        <br>
-    <p>For now, may I direct your attention to
-    <p>my <a href="https://github.com/zschaffer">creative endeavours</a>,
-    <p>and <a href="now.html">current happenings</a>.
+  <p>You have stumbled upon my dear little site
+  <p>lacking much in terms of content
+  <p>yet still full of life.
+  <p>I'd encourage a repeat visit
+  <p>as often as you'd like.
+  <p>Who knows what might change
+  <p>as time progresses on.
+    <br>
+    <br>
+  <p>For now, may I direct your attention to
+  <p>my <a href="https://github.com/zschaffer">creative endeavours</a>,
+  <p>and <a href="now.html">current happenings</a>.
 </article>
-<p>---</p>
-<p id=1>[1] - <a href="https://rhodesmill.org/brandon/2012/one-sentence-per-line/">Semantic Linefeeds</a> as a creative writing technique</p>
