Remove album images - replace with single line entries or just last.fm embed?

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <nav>
     <a href="#about">About</a>
     <a href="#now">Now</a>
-    <a href="#aotw">Aotw</a>
-    <a href="#sound">Sound</a>
+    <a href="#music">Music</a>
   </nav>
 </header>
 <section id="home">
@@ -72,7 +71,7 @@
   <p>and detailed</p>
   <p>listing of what I'm playing.</p>
 </section>
-<section id="sound">
+<section id="music">
   <p> You can hear me stream music live</p>
   <p> Mondays, Wednesdays, and Fridays</p>
   <p> 11:00am PST at <a href="https://tilderadio.org">tilderadio</a>.</p>
@@ -83,14 +82,15 @@
   <p> <a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a> & <a
       href="https://soundcloud.com/zaneschaffer">Soundcloud</a></p>
 </section>
-<section id="aotw">
+<!-- <section id="aotw">
   <p>Welcome to my attempt at cataloging my listening:
   <div class="grid">
-    <img class="cover" alt="[44] Dauwd - Theory Of Colours" title="[44] Dauwd - Theory Of Colours"
-      src="albums/2022/44/cover.jpg">
-    <img class="cover" alt="[45] Alternate Current - Fresh Scars From Old Wounds"
-      title="[45] Alternate Current - Fresh Scars From Old Wounds" src="albums/2022/45/cover.jpg">
-    <img class="cover" alt="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002"
-      title="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002" src="albums/2022/46/cover.jpg">
+    <img loading="lazy" class="cover" alt="[44] Dauwd - Theory Of Colours" title="[44] Dauwd - Theory Of Colours"
+      src="aotw/2022/44/cover.jpg">
+    <img loading="lazy" class="cover" alt="[45] Alternate Current - Fresh Scars From Old Wounds"
+      title="[45] Alternate Current - Fresh Scars From Old Wounds" src="aotw/2022/45/cover.jpg">
+    <img loading="lazy" class="cover" alt="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002"
+      title="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002" src="aotw/2022/46/cover.jpg">
   </div>
 </section>
+-->
