--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
   <p>Who knows what might change</p>
   <p>as time progresses on.</p>
   <p>For now, may I direct your attention to</p>
-  <p>my <a href="https://github.com/zschaffer">creative endeavours</a>,</p>
-  <p>and <a href="now.html">current happenings</a>.</p>
+  <p>my <a href="https://github.com/zschaffer">creative endeavours.</a></p>
 </section>
 <section id="about">
   <p>I am a 26 year old male,</p>
@@ -75,6 +74,8 @@
   <p> You can hear me stream music live</p>
   <p> Mondays, Wednesdays, and Fridays</p>
   <p> 11:00am PST at <a href="https://tilderadio.org">tilderadio</a>.</p>
+  <br>
+  <p> You can find archives of my live streams <a href="archive">here</a>.</p>
   <br>
   <p> My released music lives on</p>
   <p> <a href="https://open.spotify.com/artist/1stp6XCHbjsyVmOYGyYBuz">Spotify</a> & <a
