add back album of the week

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <section id="now">
   <p>I am currently learning more about embedded systems,</p>
   <p>how they interact, and how they communicate inside.</p>
-  <p>I've been focusing on <a href="https://github.com/zschaffer/wax.git" >making things in C/C++</a></p>
+  <p>I've been focusing on <a href="https://github.com/zschaffer/wax.git">making things in C/C++</a></p>
   <p>reading endless manpages</p>
   <p>and tinkering with SBC's.</p>
   <br>
@@ -83,15 +83,14 @@
   <p> <a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a> & <a
       href="https://soundcloud.com/zaneschaffer">Soundcloud</a></p>
 </section>
-<!-- <section id="aotw">
+<section id="aotw">
   <p>Welcome to my attempt at cataloging my listening:
   <div class="grid">
-    <img loading="lazy" class="cover" alt="[44] Dauwd - Theory Of Colours" title="[44] Dauwd - Theory Of Colours"
-      src="aotw/2022/44/cover.jpg">
-    <img loading="lazy" class="cover" alt="[45] Alternate Current - Fresh Scars From Old Wounds"
-      title="[45] Alternate Current - Fresh Scars From Old Wounds" src="aotw/2022/45/cover.jpg">
-    <img loading="lazy" class="cover" alt="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002"
-      title="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002" src="aotw/2022/46/cover.jpg">
+    <a href="aotw/44"><img loading="lazy" class="cover" alt="[44] Dauwd - Theory Of Colours"
+        title="[44] Dauwd - Theory Of Colours" src="img/44_cover.png"></a>
+    <a href="aotw/45"><img loading="lazy" class="cover" alt="[45] Alternate Current - Fresh Scars From Old Wounds"
+        title="[45] Alternate Current - Fresh Scars From Old Wounds" src="img/45_cover.png"></a>
+    <a href="aotw/46"><img loading="lazy" class="cover" alt="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002"
+        title="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002" src="img/46_cover.png"></a>
   </div>
 </section>
--->
