Add updated font

--- a/index.html
+++ b/index.html
@@ -10,87 +10,50 @@
     <a href="#home">Zane Schaffer</a>
   </h1>
   <nav>
-    <a href="#about">About</a>
     <a href="#now">Now</a>
     <a href="#music">Music</a>
+    <a href="#aotw">Aotw</a>
   </nav>
 </header>
 <section id="home">
-  <p>You have stumbled upon my dear little site<label for="fn1">1</label><input id="fn1" type="checkbox"><small>I've
-      been experimenting using <a href="https://rhodesmill.org/brandon/2012/one-sentence-per-line/">Semantic
-        Linefeeds</a> as a creative writing tool</small>
-  </p>
-  <p>lacking much in terms of content</p>
-  <p>yet still full of life.</p>
-  <p>I'd encourage a repeat visit</p>
-  <p>as often as you'd like.</p>
-  <p>Who knows what might change</p>
-  <p>as time progresses on.</p>
-  <p>For now, may I direct your attention to</p>
-  <p>my <a href="https://github.com/zschaffer">creative endeavours.</a></p>
-</section>
-<section id="about">
-  <p>I am a 26 year old male,</p>
-  <p>born in the Pacific Northwest</p>
-  <p>to a pair of loving parents,</p>
-  <p>pure creatives at heart.</p>
-  <br>
-  <p>I grew up with music,</p>
-  <p>always in my ears,</p>
-  <p>with obsession</p>
-  <p>for odd sounds.</p>
-  <br>
-  <p>My passions moved</p>
-  <p>to computers and doodads</p>
-  <p>buzzing and humming</p>
-  <p>and heating my lap.</p>
-  <br>
-  <p>I'd like to make tools.</p>
-  <p>Ones for artists and thinkers,</p>
-  <p>musicians and listeners,</p>
-  <p>people and children.</p>
-  <br>
-  <p>I'd like to make it easier,</p>
-  <p>to hear those sounds and</p>
-  <p>let people crackle,</p>
-  <p>and warble,</p>
-  <p>and pop.</p>
+  <p>You have stumbled upon my dear little site <br>
+    lacking much in terms of content yet still full of life. <br>
+    I'd encourage a repeat visit as often as you'd like. <br>
+    Who knows what might change as time progresses on. <br>
+    For now, may I direct your attention to
+    my <a href="https://github.com/zschaffer">creative endeavours.</a></p>
 </section>
 <section id="now">
-  <p>I am currently learning more about embedded systems,</p>
-  <p>how they interact, and how they communicate inside.</p>
-  <p>I've been focusing on <a href="https://github.com/zschaffer/wax.git">making things in C/C++</a></p>
-  <p>reading endless manpages</p>
-  <p>and tinkering with SBC's.</p>
+  <p>I am currently learning more about embedded systems,
+    how they interact, and how they communicate inside.
+    I've been focusing on <a href="https://github.com/zschaffer/wax.git">making things in C/C++</a>
+    reading endless manpages and tinkering with SBC's.</p>
   <br>
-  <p>I've lost the motivation and free time to create</p>
-  <p>and lately I only listen.</p>
-  <p>To make up for this -</p>
-  <p>I'm starting to curate a reviewed</p>
-  <p>and detailed</p>
-  <p>listing of what I'm playing.</p>
+  <p>I've lost the motivation and free time to create and lately I only listen.
+    To make up for this - I'm starting to curate a reviewed
+    and detailed listing of what I'm playing.</p>
 </section>
 <section id="music">
-  <p> You can hear me stream music live</p>
-  <p> Mondays, Wednesdays, and Fridays</p>
-  <p> 11:00am PST at <a href="https://tilderadio.org">tilderadio</a>.</p>
-  <br>
+  <p> You can hear me stream music live Mondays, Wednesdays, and Fridays
+    11:00am PST at <a href="https://tilderadio.org">tilderadio</a>.</p>
   <p> You can find archives of my live streams <a href="archive">here</a>.</p>
-  <br>
-  <p> My released music lives on</p>
-  <p> <a href="https://open.spotify.com/artist/1stp6XCHbjsyVmOYGyYBuz">Spotify</a> & <a
-      href="https://zaneschaffer.bandcamp.com">Bandcamp</a></p>
-  <p> <a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a> & <a
-      href="https://soundcloud.com/zaneschaffer">Soundcloud</a></p>
+  <p> My released music lives on
+    <br>
+    <a href="https://open.spotify.com/artist/1stp6XCHbjsyVmOYGyYBuz">Spotify</a> & <a
+      href="https://zaneschaffer.bandcamp.com">Bandcamp</a>
+    <br>
+    <a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a> & <a
+      href="https://soundcloud.com/zaneschaffer">Soundcloud</a>
+  </p>
 </section>
 <section id="aotw">
-  <p>Welcome to my attempt at cataloging my listening:
+  <p>Welcome to my attempt at cataloging my weekly listening</p>
   <div class="grid">
-    <a href="aotw/44"><img loading="lazy" class="cover" alt="[44] Dauwd - Theory Of Colours"
-        title="[44] Dauwd - Theory Of Colours" src="img/44_cover.png"></a>
-    <a href="aotw/45"><img loading="lazy" class="cover" alt="[45] Alternate Current - Fresh Scars From Old Wounds"
-        title="[45] Alternate Current - Fresh Scars From Old Wounds" src="img/45_cover.png"></a>
-    <a href="aotw/46"><img loading="lazy" class="cover" alt="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002"
-        title="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002" src="img/46_cover.png"></a>
+    <img loading="lazy" class="cover" alt="[44] Dauwd - Theory Of Colours"
+        title="[44] Dauwd - Theory Of Colours" src="img/44_cover.png">
+    <img loading="lazy" class="cover" alt="[45] Alternate Current - Fresh Scars From Old Wounds"
+        title="[45] Alternate Current - Fresh Scars From Old Wounds" src="img/45_cover.png">
+    <img loading="lazy" class="cover" alt="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002"
+        title="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002" src="img/46_cover.png">
   </div>
 </section>
