--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <p>You have stumbled upon my dear little site <br>
     lacking much in terms of content yet still full of life. <br>
     I'd encourage a repeat visit as often as you'd like. <br>
-    Who knows what might change as time progresses on. <br>
     For now, may I direct your attention to
     my <a href="https://github.com/zschaffer">creative endeavours.</a></p>
 </section>
@@ -34,17 +33,17 @@
     and detailed listing of what I'm playing.</p>
 </section>
 <section id="music">
-  <p> You can hear me stream music live Mondays, Wednesdays, and Fridays
-    11:00am PST at <a href="https://tilderadio.org">tilderadio</a>.</p>
-  <p> You can find archives of my live streams <a href="archive">here</a>.</p>
-  <p> My released music lives on
-    <br>
-    <a href="https://open.spotify.com/artist/1stp6XCHbjsyVmOYGyYBuz">Spotify</a> & <a
-      href="https://zaneschaffer.bandcamp.com">Bandcamp</a>
-    <br>
-    <a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a> & <a
-      href="https://soundcloud.com/zaneschaffer">Soundcloud</a>
-  </p>
+	<p> You can hear me stream music live <br>
+	Mondays, Wednesdays, and Fridays 11:00am PST <br> at <a href="https://tilderadio.org">tilderadio</a>.</p>
+	<p> You can find archives of my live streams <a href="archive">here</a>.</p>
+	<p> My released music lives on
+	<br>
+	<a href="https://open.spotify.com/artist/1stp6XCHbjsyVmOYGyYBuz">Spotify</a> & <a
+	   href="https://zaneschaffer.bandcamp.com">Bandcamp</a>
+	<br>
+	<a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a> & <a
+	   href="https://soundcloud.com/zaneschaffer">Soundcloud</a>
+	</p>
 </section>
 <section id="aotw">
   <p>Welcome to my attempt at cataloging my weekly listening</p>
