change welcome page

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
   </nav>
 </header>
 <section id="home">
-  <p>You have stumbled upon my dear little site <br>
-    lacking much in terms of content yet still full of life. <br>
-    I'd encourage a repeat visit as often as you'd like. <br>
-    For now, may I direct your attention to
-    my <a href="https://github.com/zschaffer">creative endeavours.</a></p>
+  <p>Welcome,</p>
+  <p>I've not much to say here - This is my home on the internet. A place I feel comfortable rearranging and styling,
+    thousands of times over. Feel free to explore my home, reach out for a chat, or send me an email.</p>
+  <p>As for me, myself, and I? My background is in music and technology - lately more the latter. Find out more <a
+      href="#now">here</a> and <a href="#music">here</a>.</p>
+  <p>You can reach me slowly via <a href="mailto:mail@zane.town">my email inbox</a> or by PRIVMSG'ing zane on <a
+      href="https://tilde.chat">irc.tilde.chat</a>. </p>
 </section>
 <section id="now">
   <p>I am currently learning more about embedded systems,
@@ -33,26 +35,27 @@
     and detailed listing of what I'm playing.</p>
 </section>
 <section id="music">
-	<p> You can hear me stream music live <br>
-	Mondays, Wednesdays, and Fridays 11:00am PST <br> at <a href="https://tilderadio.org">tilderadio</a>.</p>
-	<p> You can find archives of my live streams <a href="archive">here</a>.</p>
-	<p> My released music lives on
-	<br>
-	<a href="https://open.spotify.com/artist/1stp6XCHbjsyVmOYGyYBuz">Spotify</a> & <a
-	   href="https://zaneschaffer.bandcamp.com">Bandcamp</a>
-	<br>
-	<a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a> & <a
-	   href="https://soundcloud.com/zaneschaffer">Soundcloud</a>
-	</p>
+  <p>I don't make much music these days.. Yet I try to stay active in other ways. For instance, you can find me
+    streaming music live,
+    Mondays, Wednesdays, and Fridays 11:00am PST at <a href="https://tilderadio.org">tilderadio</a>.</p>
+  <p>You can find archives of my live streams <a href="archive">here</a>.</p>
+  <p>My released music lives on
+    <br>
+    <a href="https://open.spotify.com/artist/1stp6XCHbjsyVmOYGyYBuz">Spotify</a> & <a
+      href="https://zaneschaffer.bandcamp.com">Bandcamp</a>
+    <br>
+    <a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a> & <a
+      href="https://soundcloud.com/zaneschaffer">Soundcloud</a>
+  </p>
 </section>
 <section id="aotw">
-  <p>Welcome to my attempt at cataloging my weekly listening</p>
+  <p>This is an attempt to catalog my goal of listening to a full new album a week.</p>
   <div class="grid">
-    <img loading="lazy" class="cover" alt="[44] Dauwd - Theory Of Colours"
-        title="[44] Dauwd - Theory Of Colours" src="img/44_cover.png">
+    <img loading="lazy" class="cover" alt="[44] Dauwd - Theory Of Colours" title="[44] Dauwd - Theory Of Colours"
+      src="img/44_cover.png">
     <img loading="lazy" class="cover" alt="[45] Alternate Current - Fresh Scars From Old Wounds"
-        title="[45] Alternate Current - Fresh Scars From Old Wounds" src="img/45_cover.png">
+      title="[45] Alternate Current - Fresh Scars From Old Wounds" src="img/45_cover.png">
     <img loading="lazy" class="cover" alt="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002"
-        title="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002" src="img/46_cover.png">
+      title="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002" src="img/46_cover.png">
   </div>
 </section>
