change picture format

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
   <p>This is an attempt to catalog my goal of listening to a full new album a week.</p>
   <div class="grid">
     <img loading="lazy" class="cover" alt="[44] Dauwd - Theory Of Colours" title="[44] Dauwd - Theory Of Colours"
-      src="img/44_cover.png">
+      src="img/44_cover.avif">
     <img loading="lazy" class="cover" alt="[45] Alternate Current - Fresh Scars From Old Wounds"
-      title="[45] Alternate Current - Fresh Scars From Old Wounds" src="img/45_cover.png">
+      title="[45] Alternate Current - Fresh Scars From Old Wounds" src="img/45_cover.avif">
     <img loading="lazy" class="cover" alt="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002"
-      title="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002" src="img/46_cover.png">
+      title="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002" src="img/46_cover.avif">
   </div>
 </section>
