change some things

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <link href="style.css" rel="stylesheet">
 <header>
   <h1>
-    <a href="#home">Zane Schaffer</a>
+    <a href="#home">Home</a>
   </h1>
   <nav>
     <a href="#now">Now</a>
     <a href="#music">Music</a>
-    <a href="#aotw">Aotw</a>
+    <!-- <a href="#aotw">Aotw</a> -->
   </nav>
 </header>
 <section id="home">
