--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>zane.town</title>
+<title>ZANE</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="me" href="https://hachyderm.io/@zane" />
+<link rel="me" href="https://tilde.zone/@zane" />
 <link href="style.css" rel="stylesheet">
 <header>
-  <h1>
-    <a href="#home">Home</a>
-  </h1>
+	<h1>
+    <a href="#home">
+      Home
+	    
+    </a>
+	</h1>
   <nav>
     <a href="#now">Now</a>
     <a href="#music">Music</a>
