--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>ZANE</title>
+<title>!!!</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="me" href="https://tilde.zone/@zane" />
 <link href="style.css" rel="stylesheet">
+<link rel="icon" href="icon.svg" type="image/svg+xml">
 <header>
 	<h1>
     <a href="#home">
-      Home
-	    
+      <img src=icon.svg>
     </a>
 	</h1>
   <nav>
     <a href="#now">Now</a>
     <a href="#music">Music</a>
-    <!-- <a href="#aotw">Aotw</a> -->
+    <a href="#aotw">Aotw</a>
+    <a href="https://github.com/zschaffer">Code</a>
   </nav>
 </header>
 <section id="home">
-  <p>Welcome,</p>
   <p>I've not much to say here - This is my home on the internet. A place I feel comfortable rearranging and styling,
     thousands of times over. Feel free to explore my home, reach out for a chat, or send me an email.</p>
-  <p>As for me, myself, and I? My background is in music and technology - lately more the latter. Find out more <a
+  <p>My background is in music and technology - lately more the latter. Find out more <a
       href="#now">here</a> and <a href="#music">here</a>.</p>
   <p>You can reach me slowly via <a href="mailto:mail@zane.town">my email inbox</a> or by PRIVMSG'ing zane on <a
       href="https://tilde.chat">irc.tilde.chat</a>. </p>
