change email addres

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     thousands of times over. Feel free to explore my home, reach out for a chat, or send me an email.</p>
   <p>My background is in music and technology - lately more the latter. Find out more <a
       href="#now">here</a> and <a href="#music">here</a>.</p>
-  <p>You can reach me slowly via <a href="mailto:mail@zane.town">my email inbox</a> or by PRIVMSG'ing zane on <a
+  <p>You can reach me slowly via <a href="mailto:personal.zane@gmail.com">my email inbox</a> or by PRIVMSG'ing zane on <a
       href="https://tilde.chat">irc.tilde.chat</a>. </p>
 </section>
 <section id="now">
