--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <link href="style.css" rel="stylesheet">
 <link rel="icon" href="icon.svg" type="image/svg+xml">
 <header>
-	<h1>
+  <h1>
     <a href="#home">
       <img id="logo" src=icon.svg>
     </a>
-	</h1>
+  </h1>
   <nav>
     <a href="#now">Now</a>
     <a href="#music">Music</a>
@@ -20,14 +20,45 @@
   </nav>
 </header>
 <section id="home">
-  <p>I've not much to say here - This is my home on the internet. A place I feel comfortable rearranging and styling,
-    thousands of times over. Feel free to explore my home, reach out for a chat, or send me an email.</p>
-  <p>My background is in music and technology - lately more the latter. Find out more <a
-      href="#now">here</a> and <a href="#music">here</a>.</p>
-  <p>You can reach me slowly via <a href="mailto:personal.zane@gmail.com">my email inbox</a> or by PRIVMSG'ing zane on <a
-      href="https://tilde.chat">irc.tilde.chat</a>. </p>
+  <h2>Zane Schaffer</h2>
+  <p>Former musician, future programmer, presently here.</p>
+  <p>Never been a natural at writing blog posts or documenting my interests - It's something I wish to get better at. I
+    hope putting time into this site will give me the motivation to write more, share more, and be more open.</p>
+
+  <br>
+  <h2>CV</h2>
+  <p>2021-2022 -> Campaign Specialist @ Cox Automotive</p>
+  <ul>
+    <li>Built promotional pages for dealerships across the country</li>
+    <li>Won company hackathon with code generation tool</li>
+  </ul>
+  <br>
+  <p>2020-2021 -> Front End Web Developer @ Zoe Bios
+    Creative</p>
+  <ul>
+    <li>Created a bespoke Shopify theme for client</li>
+    <li>Built Shopify apps using NodeJS</li>
+  </ul>
+  <br>
+  <p>2018-2019 -> Event Coordinator @ Perfumerie</p>
+  <ul>
+    <li>Orchestrated events with high-end perfumers</li>
+    <li>Gave educational briefings to customers</li>
+  </ul>
+  <br>
+  <p>2014-2018 -> Musician @ Zane Schaffer</p>
+  <ul>
+    <li>Played shows and festivals in America and Europe</li>
+    <li>Amassed over thirty million streams online</li>
+  </ul>
+  <br>
+  <h2>Contact</h2>
+  <p>You can reach me slowly via <a href="mailto:personal.zane@gmail.com">my email inbox</a> or by PRIVMSG'ing zane on
+    <a href="https://tilde.chat">irc.tilde.chat</a>.
+  </p>
 </section>
 <section id="now">
+  <h2>What Am I Doing Now?</h2>
   <p>I am currently learning more about embedded systems,
     how they interact, and how they communicate inside.
     I've been focusing on <a href="https://github.com/zschaffer/wax.git">making things in C/C++</a>
@@ -38,6 +69,7 @@
     and detailed listing of what I'm playing.</p>
 </section>
 <section id="music">
+  <h2>My Creative Endeavours</h2>
   <p>I don't make much music these days.. Yet I try to stay active in other ways. For instance, you can find me
     streaming music live,
     Mondays, Wednesdays, and Fridays 11:00am PST at <a href="https://tilderadio.org">tilderadio</a>.</p>
@@ -52,14 +84,15 @@
   </p>
 </section>
 <section id="aotw">
+  <h2>Album Of The Week</h2>
   <p>This is an attempt to catalog my goal of listening to a full new album a week.</p>
   <div class="grid">
     <a>
-    <img loading="lazy" class="cover" alt="[44] Dauwd - Theory Of Colours" title="[44] Dauwd - Theory Of Colours"
-    src="img/44_cover.avif"></a>
+      <img loading="lazy" class="cover" alt="[44] Dauwd - Theory Of Colours" title="[44] Dauwd - Theory Of Colours"
+        src="img/44_cover.avif"></a>
     <a><img loading="lazy" class="cover" alt="[45] Alternate Current - Fresh Scars From Old Wounds"
-      title="[45] Alternate Current - Fresh Scars From Old Wounds" src="img/45_cover.avif"></a>
+        title="[45] Alternate Current - Fresh Scars From Old Wounds" src="img/45_cover.avif"></a>
     <a><img loading="lazy" class="cover" alt="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002"
-      title="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002" src="img/46_cover.avif"></a>
+        title="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002" src="img/46_cover.avif"></a>
   </div>
 </section>
