--- a/index.html
+++ b/index.html
@@ -27,26 +27,25 @@
 
   <br>
   <h2>CV</h2>
-  <p>2021-2022 -> Campaign Specialist @ Cox Automotive</p>
+  <p>Campaign Specialist @ Cox Automotive</p>
   <ul>
     <li>Built promotional pages for dealerships across the country</li>
     <li>Won company hackathon with code generation tool</li>
   </ul>
   <br>
-  <p>2020-2021 -> Front End Web Developer @ Zoe Bios
-    Creative</p>
+  <p>Front End Web Developer @ Zoe Bios Creative</p>
   <ul>
     <li>Created a bespoke Shopify theme for client</li>
     <li>Built Shopify apps using NodeJS</li>
   </ul>
   <br>
-  <p>2018-2019 -> Event Coordinator @ Perfumerie</p>
+  <p>Event Coordinator @ Perfumerie</p>
   <ul>
     <li>Orchestrated events with high-end perfumers</li>
     <li>Gave educational briefings to customers</li>
   </ul>
   <br>
-  <p>2014-2018 -> Musician @ Zane Schaffer</p>
+  <p>Musician @ Zane Schaffer</p>
   <ul>
     <li>Played shows and festivals in America and Europe</li>
     <li>Amassed over thirty million streams online</li>
