fix some stylilng issues

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <section id="home">
   <h2>Zane Schaffer</h2>
   <p>Former musician, future programmer, presently here.</p>
-  <p>Never been a natural at writing blog posts or documenting my interests - It's something I wish to get better at. I
-    hope putting time into this site will give me the motivation to write more, share more, and be more open.</p>
+  <!-- <p>Never been a natural at writing blog posts or documenting my interests - It's something I wish to get better at. I -->
+  <!--   hope putting time into this site will give me the motivation to write more, share more, and be more open.</p> -->
 
   <br>
   <h2>CV</h2>
