--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav>
     <a href="#now">Now</a>
     <a href="#music">Music</a>
-    <a href="#aotw">Aotw</a>
+    <a href="#garden">Garden</a>
     <a href="https://github.com/zschaffer">Code</a>
   </nav>
 </header>
@@ -81,6 +81,18 @@
     <a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a> & <a
       href="https://soundcloud.com/zaneschaffer">Soundcloud</a>
   </p>
+</section>
+<section id="garden">
+    <h2>My Garden</h2>
+    <div class="grid">
+        <a><img loading="lazy" src="img/1.png"></a>
+        <a><img loading="lazy" src="img/2.png"></a>
+        <a><img loading="lazy" src="img/3.png"></a>
+        <a><img loading="lazy" src="img/4.png"></a>
+        <a><img loading="lazy" src="img/6.png"></a>
+        <a><img loading="lazy" src="img/7.png"></a>
+        <a><img loading="lazy" src="img/8.png"></a>
+    </div>
 </section>
 <section id="aotw">
   <h2>Album Of The Week</h2>
