--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <nav>
     <a href="#now">Now</a>
     <a href="#music">Music</a>
+    <a href="#radio">Radio</a>
     <a href="#garden">Garden</a>
     <a href="https://github.com/zschaffer">Code</a>
   </nav>
@@ -68,12 +69,9 @@
     and detailed listing of what I'm playing.</p>
 </section>
 <section id="music">
-  <h2>My Creative Endeavours</h2>
-  <p>I don't make much music these days.. Yet I try to stay active in other ways. For instance, you can find me
-    streaming music live,
-    Mondays, Wednesdays, and Fridays 11:00am PST at <a href="https://tilderadio.org">tilderadio</a>.</p>
-  <p>You can find archives of my live streams <a href="archive">here</a>.</p>
-  <p>My released music lives on
+  <h2>My Music</h2>
+  <p>It's been a while since I've released music - my released songs can be found at:
+    <br>
     <br>
     <a href="https://open.spotify.com/artist/1stp6XCHbjsyVmOYGyYBuz">Spotify</a> & <a
       href="https://zaneschaffer.bandcamp.com">Bandcamp</a>
@@ -81,6 +79,20 @@
     <a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a> & <a
       href="https://soundcloud.com/zaneschaffer">Soundcloud</a>
   </p>
+</section>
+<section id="radio">
+  <h2>Radio Streaming</h2>
+  <p>I don't make much music these days.. Yet I try to stay active in other ways. For instance, you can find me
+    streaming music live,
+    Mondays, Wednesdays, and Fridays 11:00am PST at <a href="https://tilderadio.org">tilderadio</a>.</p>
+  <p>
+  <h3>Archives</h3>
+  <a href="./archive/2022_11_21.mp3"><p>2022/11/21</p></a>
+  <a href="./archive/2022_11_23.mp3"><p>2022/11/23</p></a>
+  <a href="./archive/2022_11_28.mp3"><p>2022/11/28</p></a>
+  <a href="./archive/2022_11_30.mp3"><p>2022/11/30_1</p></a>
+  <a href="./archive/2022_11_30.mp3"><p>2022/11/30_2</p></a>
+
 </section>
 <section id="garden">
     <h2>My Garden</h2>
