--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <header>
   <h1>
     <a href="#home">
-      <img id="logo" src=icon.svg>
+      <img id="logo" src="./img/1.png">
     </a>
   </h1>
-  <nav>
+  <nav style="font-family: Mondwest">
     <a href="#now">Now</a>
     <a href="#music">Music</a>
     <a href="#radio">Radio</a>
